const en = {
  auth: {
    welcome: 'Welcome Back',
    dontHaveAccount: 'Don\'t have an account?',
    registerHere: 'Register here',
    notFound404: '404: Not Found',
    gone: 'It\'s gone',
    backTo: 'Go back to {{path}}',
    checkingAuth: 'Checking your authentication...',
  },
  home: {
    title: 'Expo App using:',
...
